# zless

./: .gitignore  README.rst  pyproject.toml  tox.ini
src/zless/: __init__.py  __main__.py  archive.py
src/zscope/: __init__.py  __main__.py  archive.py  paths.py
tests/: test_archive.py  test_archive_gzip_tar.py  test_paths.py
tests/fixtures/: PKG-INFO  zless-22.1.dev0-py3-none-any.whl  zless-22.1.dev0.tar  zscope-22.1.dev0-py3-none-any.whl  zscope-22.1.dev0.tar
