[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zless"
version = "22.1.dev0"
description = "Read text files from compressed archives in the terminal"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.scripts]
zless = "zless.__main__:zless"

[tool.poetry.dependencies]
python = "^3.8"
simple-term-menu = "^1.5.2"
click = "^8.1.3"

[tool.poetry.group.testing.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}

[tool.poetry.group.typechecking]
optional = true

[tool.poetry.group.typechecking.dependencies]
mypy = "^0.982"

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
black = "^22.10.0"
Flake8-pyproject = "^1.1.0.post0"
flake8-bugbear = "^22.9.23"

[tool.coverage.paths]
source = [
  "src",
  "/private/tmp/tox_zless/**/site-packages",
  "/tmp/tox_zless/**/site-packages"
]

[tool.coverage.report]
exclude_lines = [
  "\\.\\.\\.",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "tests/coverage"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501"]
extend-select = ["B950"]

[tool.mpy]
pretty = true

[[tool.mypy.overrides]]
module = "simple_term_menu"
ignore_missing_imports = true
