[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zscope"
version = "22.1.dev0"
description = "Read text files from compressed archives in the terminal"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
packages = [{include = "zscope", from = "src"}]

[tool.poetry.scripts]
zscope = "zscope.__main__:zscope"

[tool.poetry.dependencies]
python = "^3.8"
simple-term-menu = "^1.5.2"
click = "^8.1.3"

[tool.poetry.group.testing.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^7.0.1"}

[tool.poetry.group.typechecking]
optional = true

[tool.poetry.group.typechecking.dependencies]
mypy = "^0.982"

[tool.poetry.group.linting]
optional = true

[tool.poetry.group.linting.dependencies]
black = "^22.10.0"

[tool.coverage.paths]
source = [
  "src",
  "$TOXWORKDIR/**/site-packages",
]

[tool.coverage.report]
exclude_lines = [
  "\\.\\.\\.",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "tests/coverage"

[tool.black]
line-length = 96
target-version = ["py38", "py39", "py310", "py311"]

[tool.mpy]
pretty = true

[[tool.mypy.overrides]]
module = "simple_term_menu"
ignore_missing_imports = true
